--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
 <div class='title'>
 	<h1>ArranHS</h1>
-</div>
+</div><br>
 <div class='tabbar'>
     <p>| Heli Timer | </p>
+</div>
 <p>
 	<div class="aboutme">
     This site is purely for testing and probably will never become anything. I might use it to store a few projects on such as HTML/JS/CSS crap or stuff from my <a href="http://steamcommunity.com/id/scizornician/myworkshopfiles"/>Steam Workshop</a>.
