--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
 	<h1>ArranHS</h1>
 </div><br>
 <div class="tab">
-  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'London')">Heli Timer</a>
-  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Paris')">Filler</a>
-  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Tokyo')">Filler</a>
+  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Heli')">Heli Timer</a>
+  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Filler1')">Filler</a>
+  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Filler2')">Filler</a>
 </div>
-<div id="London" class="tabcontent">
+<div id="Heli" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">x</span>
   <h3>Heli Timer</h3>
   <p>The heli timer will live here.</p>
+</div>
+<div id="Filler1" class="tabcontent">
+  <span onclick="this.parentElement.style.display='none'" class="topright">x</span>
+  <h3>Filler</h3>
+  <p>Blah blah blah blah.</p>
+</div>
+<div id="Filler2" class="tabcontent">
+  <span onclick="this.parentElement.style.display='none'" class="topright">x</span>
+  <h3>Filler</h3>
+  <p>Blah blah blah blah.</p>
 </div>
 <p>
 	<div class="aboutme">
