--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <link rel='stylesheet' type='text/css' href='css/style.css'>
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
-    <title>Arran HS</title>
+    <title>Arran's Shitshack</title>
 </head>
 <body>
 <div class='title'>
-	<h1>ArranHS</h1>
+	<h1><font size="50">Arran's Shitshack</font></h1>
 </div><br>
 <div class="tab">
   <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Heli')">Heli Timer</a>
