--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 <p>
 	<div class="aboutme">
-    This site is purely for testing and probably will never become anything. I might use it to store a few projects on such as HTML/JS/CSS crap or stuff from my <a href="http://steamcommunity.com/id/scizornician/myworkshopfiles"/>Steam Workshop</a>.
+    This site is purely for testing and probably will never become anything. I might use it to store a few projects on such as HTML/JS/CSS crap or stuff from my <a href="http://steamcommunity.com/id/scizornician/myworkshopfiles" class="link"/>Steam Workshop</a>.
     Don't expect much from this website, I'm running off a days worth of knowledge from Codecademy so far so I'm pretty limited in what I can do. I am enjoying it though. :)
     </div>
     <br>
