Heli timer prep

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
 </div>
 <div id="Heli" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">x</span>
-  <h3>Heli Timer</h3>
-  <p>The heli timer will live here.</p>
+  <center><h1>Helicopter Timer!</h4>
+  <p>The heli timer will live here. Press the button below (once the helicopter has arrived) to start the timer and you will be alerted when the helicopter should next arrive in Rust.</p>
+  <div class="helibutton">Start Timer</div>
+  <div class="helitext">
+  <h3>Heli is here!</h3>
+  <p>Blah blah blah blah.</p></center>
+</div>
 </div>
 <div id="Filler1" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">x</span>
@@ -29,6 +34,7 @@
   <h3>Filler</h3>
   <p>Blah blah blah blah.</p>
 </div>
+
 <p>
 	<div class="aboutme">
     This site is purely for testing and probably will never become anything. I might use it to store a few projects on such as HTML/JS/CSS crap or stuff from my <a href="http://steamcommunity.com/id/scizornician/myworkshopfiles" class="link"/>Steam Workshop</a>.
