--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 <div id="Filler1" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="closebutton">x</span>
-  <h3>Rusty Tromb</h3>
+  <h3>Rusty Trombone</h3>
   <p>Blah blah blah blah.</p>
 </div>
 <div id="Filler2" class="tabcontent">
