--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 
 <p>
 	<div class="textbody">
-    This website is currently under revamp to suit it for the new Rust server I part own called Rusty Trombone. Rusty Trombone is a vanilla oxide server with a few plugins for QOL for features such as Kill Feeds, Join/Disconnect messages and SignArtist. The server website will contain tools such as the Heli Timer which is a WIP, a KDR display and a few other nifty features.   </div>
-    <br>
+    This website is currently under revamp to suit it for the new Rust server I part own called Rusty Trombone. Rusty Trombone is a vanilla oxide server with a few plugins for QOL for features such as Kill Feeds, Join/Disconnect messages and SignArtist. The server website will contain tools such as the Heli Timer which is a WIP, a KDR display and a few other nifty features.
+  </div>
+  <br>
 </p>
 <p>
 	<body link="white">
