--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h1><font size="50">Arran's Shitshack</font></h1>
 </div><br>
 <div class="tab">
-  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, '')">Heli Timer</a>
+  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'About')">About</a>
   <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Heli')">Heli Timer</a>
   <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Filler1')">Filler</a>
   <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Filler2')">Filler</a>
@@ -19,9 +19,9 @@
   <span onclick="this.parentElement.style.display='none'" class="closebutton">x</span>
   <center><h1>Helicopter Timer!</h4>
   <p>The heli timer will live here. Press the button below (once the helicopter has arrived) to start the timer and you will be alerted when the helicopter should next arrive in Rust.</p>
-  <div class="helibutton">Start Timer</div>
+  <a href="javascript:void(0)" class="helibutton" onclick="runHeliTimer">Start Timer</a>
   <div class="helitext">
-  <p>This feature is a WIP.</p></center>
+  <p>This feature is a WIP. The script is not 100% accurate due to the descrepencies in the respawn time of the Heli.</p></center>
 </div>
 </div>
 <div id="Filler1" class="tabcontent">
