--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class='title'>
-	<h1><font size="50">Arran's Shitshack</font></h1>
+  <h1><font size="50">Arran's Shitshack</font></h1>
 </div><br>
 <div class="tab">
   <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'About')">About</a>
@@ -19,7 +19,7 @@
   <span onclick="this.parentElement.style.display='none'" class="closebutton">x</span>
   <center><h1>Helicopter Timer!</h4>
   <p>The heli timer will live here. Press the button below (once the helicopter has arrived) to start the timer and you will be alerted when the helicopter should next arrive in Rust.</p>
-  <a href="javascript:void(0)" class="helibutton" onclick="runHeliTimer">Start Timer</a>
+  <div class="helibutton">Start Timer</div>
   <div class="helitext">
   <p>This feature is a WIP. The script is not 100% accurate due to the descrepencies in the respawn time of the Heli.</p></center>
 </div>
@@ -36,16 +36,16 @@
 </div>
 
 <p>
-	<div class="textbody">
+  <div class="textbody">
     This website is currently under revamp to suit it for the new Rust server I part own called Rusty Trombone. Rusty Trombone is a vanilla oxide server with a few plugins for QOL for features such as Kill Feeds, Join/Disconnect messages and SignArtist. The server website will contain tools such as the Heli Timer which is a WIP, a KDR display and a few other nifty features.
   </div>
   <br>
 </p>
 <p>
-	<body link="white">
+  <body link="white">
     <div class="rustbutton">
-    	<center>Rust stats</center>
-	</div><br>
+      <center>Rust stats</center>
+  </div><br>
     <div class="ruststats">
         <center><img src="img/RustLogo.png"><br>
         <center>View your <a href="http://rust-stats.com">Rust stats</a> here until I have setup the KDR feature on this website. You will be asked to login via Steam. :)</div>
