--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="tab">
   <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'About')">About</a>
   <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Heli')">Heli Timer</a>
-  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Filler1')">Filler</a>
+  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'RustyTrombone')">Filler</a>
   <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Filler2')">Filler</a>
 </div>
 <div id="Heli" class="tabcontent">
@@ -24,7 +24,7 @@
   <p>This feature is a WIP. The script is not 100% accurate due to the descrepencies in the respawn time of the Heli.</p></center>
 </div>
 </div>
-<div id="Filler1" class="tabcontent">
+<div id="RustTrombone" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="closebutton">x</span>
   <h3>Rusty Trombone</h3>
   <p>Blah blah blah blah.</p>
