--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <div class="tab">
   <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'About')">About</a>
   <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Heli')">Heli Timer</a>
-  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'RustyTrombone')">Filler</a>
-  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Filler2')">Filler</a>
+  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'RustyTrombone')">Rusty Trombone</a>
+  <a href="http:arranhs.github.io/calc">Calculator</a>
+  <a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'Filler')">Filler</a>
 </div>
 <div id="Heli" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="closebutton">x</span>
@@ -29,7 +30,7 @@
   <h3>Rusty Trombone</h3>
   <p>Blah blah blah blah.</p>
 </div>
-<div id="Filler2" class="tabcontent">
+<div id="Filler" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="closebutton">x</span>
   <h3>Filler</h3>
   <p>Blah blah blah blah.</p>
