--- a/randomHero.html
+++ b/randomHero.html
@@ -15,3 +15,9 @@
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
     <title>Battlefront 2 Hero Randomizer</title>
 </head>
+<body>
+	<h1><font size=50>Battlefront 2 Hero Randomizer</font></h1>
+
+
+
+</body>
