--- a/randomHero.html
+++ b/randomHero.html
@@ -12,11 +12,11 @@
 }
 </style>
     <link rel='stylesheet' type='text/css' href='css/style.css'>
-    <link rel="shortcut icon" type="image/png" href="/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/Bf2ICON.png">
     <title>Battlefront 2 Hero Randomizer</title>
 </head>
 <body>
-	<h1><font size=50>Battlefront 2 Hero Randomizer</font></h1>
+	<h1><font size="50" color="white"><center>BATTLEFRONT 2 HERO RANDOMIZER</center></font></h1>
 
 
 
