--- a/randomHero.html
+++ b/randomHero.html
@@ -18,9 +18,7 @@
 <body>
 	<center>
 	<h1><font size="50" color="white">BATTLEFRONT 2 HERO RANDOMIZER</font></h1>
-	<div id="randomHero">
-		
-	</div>
+	<font size = 25 color = white><div id="randomHero"></div></font>
 	<button onclick="randomLightHero()">RANDOM LIGHT HERO</button>
 	<button onclick="randomDarkHero()">RANDOM DARK HERO</button>
 
