--- a/randomHero.html
+++ b/randomHero.html
@@ -26,7 +26,7 @@
    font-family: BF2;
 }
 </style>
-    <link rel='stylesheet' type='text/css' href='css/style.css'>
+    <link rel='stylesheet' type='text/css' href='css/bf2.css'>
     <link rel="shortcut icon" type="image/png" href="/Bf2ICON.png">
     <title>Battlefront 2 Hero Randomizer</title>
 </head>
