--- a/randomHero.html
+++ b/randomHero.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" type="image/png" href="/Bf2ICON.png">
     <title>Battlefront 2 Hero Randomizer</title>
 </head>
-<body>
+<body style="background-color: #454444">
 	<center>
 	<h1><font size="50" color="white">BATTLEFRONT 2 HERO RANDOMIZER</font></h1>
 	<font size = 25 color = white><div id="randomHero"></div></font>
