--- a/randomHero.html
+++ b/randomHero.html
@@ -10,6 +10,11 @@
 * {
    font-family: BF2;
 }
+
+body { 
+	margin:0 auto; 
+}
+
 </style>
     <link rel='stylesheet' type='text/css' href='css/bf2.css'>
     <link rel="shortcut icon" type="image/png" href="/Bf2ICON.png">
