--- a/randomHero.html
+++ b/randomHero.html
@@ -11,8 +11,18 @@
    font-family: BF2;
 }
 
-body { 
-	margin:0 auto; 
+html, body {
+    height: 100%;
+}
+
+html {
+    display: table;
+    margin: auto;
+}
+
+body {
+    display: table-cell;
+    vertical-align: middle;
 }
 
 </style>
