--- a/randomHero.html
+++ b/randomHero.html
@@ -25,6 +25,10 @@ body {
     vertical-align: middle;
 }
 
+div.uppercase {
+  text-transform: uppercase;
+}
+
 </style>
     <link rel='stylesheet' type='text/css' href='css/bf2.css'>
     <link rel="shortcut icon" type="image/png" href="/Bf2ICON.png">
@@ -33,7 +37,7 @@ body {
 <body style="background-color: #454444">
 	<center>
 	<h1><font size="50" color="white">BATTLEFRONT 2 HERO RANDOMIZER</font></h1>
-	<font size = 25 color = white><div id="randomHero"></div></font>
+	<font size = 25 color = white><div class="uppercase" id="randomHero"></div></font>
 	<button class ="bf2-buttons" onclick="randomLightHero()">RANDOM LIGHT HERO</button>
 	<button class ="bf2-buttons" onclick="randomDarkHero()">RANDOM DARK HERO</button>
 
