--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ div.uppercase {
 </head>
 <body style="background-color: #000000">
 	<center>
-	<h1><img src ='img/bf2-logo'><br><font size="50" color="white">HERO RANDOMIZER</font></h1>
+	<h1><img src ='img/bf2-logo.png'><br><font size="50" color="white">HERO RANDOMIZER</font></h1>
 	<div id="randomHeroImage"></div>
 	<font size = 20 color = white><div class="uppercase" id="randomHero"></div></font>
 	<button class ="bf2-buttons" onclick="randomLightHero()">RANDOM LIGHT HERO</button>
