--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ div.uppercase {
 	<h1><img src ='img/bf2-logo.png' width = '500' height = '120'><br><font size="50" color="white">HERO RANDOMIZER</font></h1>
 	<div id="randomHeroImage"></div>
 	<font size = 20 color = white><div class="uppercase" id="randomHero"></div></font>
-	<button class ="bf2-buttons" onclick="randomLightHero()">RANDOM LIGHT HERO</button>
-	<button class ="bf2-buttons" onclick="randomDarkHero()">RANDOM DARK HERO</button>
+	<button class ="bf2-buttons" onclick="randomLightHero()">RANDOM HERO</button>
+	<button class ="bf2-buttons" onclick="randomDarkHero()">RANDOM VILLAIN</button>
 
     </center>
 
