--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@ div.uppercase {
   text-transform: uppercase;
 }
 
+div.heroImageBorder {
+  border: solid;
+  border-color: #ffffff;
+  border-width: thick;
+}
+
 </style>
     <link rel='stylesheet' type='text/css' href='css/bf2.css'>
     <link rel="shortcut icon" type="image/png" href="/Bf2ICON.png">
@@ -37,7 +43,7 @@ div.uppercase {
 <body style="background-color: #000000">
 	<center>
 	<h1><img src ='img/bf2-logo.png' width = '500' height = '120'><br><font size="50" color="white">HERO RANDOMIZER</font></h1>
-	<div id="randomHeroImage"></div>
+	<div id="randomHeroImage" class="heroImageBorder"></div>
 	<font size = 20 color = white><div class="uppercase" id="randomHero"></div></font>
 	<button class ="bf2-buttons" onclick="randomLightHero()">RANDOM HERO</button>
 	<button class ="bf2-buttons" onclick="randomDarkHero()">RANDOM VILLAIN</button>
