--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ div.heroImageBorder {
   border: solid;
   border-color: #ffffff;
   border-width: thick;
+  box-shadow: 0 5px 20px #ffffff;
 }
 
 </style>
