--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ div.heroImageBorder {
 	<h1><img src ='img/bf2-logo.png' width = '500' height = '120'><br><font size="50" color="white">HERO RANDOMIZER</font></h1>
 	<div id="randomHeroImage" class="heroImageBorder"></div>
 	<font size = 20 color = white><div class="uppercase" id="randomHero"></div></font>
-	<button class ="bf2-buttons" onclick="randomLightHero()">RANDOM HERO</button>
+	<button class ="bf2-buttons" onclick="randomLightHero()"> RANDOM HERO </button>
 	<button class ="bf2-buttons" onclick="randomDarkHero()">RANDOM VILLAIN</button> <br>
   <button class ="bf2-buttons" onclick="clearImage()">x</button>
 
@@ -76,6 +76,7 @@ div.heroImageBorder {
 
   function clearImage() {
     document.getElementById('randomHeroImage').innerHTML = '';
+    document.getElementById('randomHero').innerHTML = '';
   }
 
  </script>
