--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@ div.heroImageBorder {
 <body style="background-color: #000000">
 	<center>
 	<h1><img src ='img/bf2-logo.png' width = '500' height = '120'><br><font size="50" color="white">HERO RANDOMIZER</font></h1>
-	<div id="randomHeroImage" class="heroImageBorder"></div>
+	<div id="randomHeroImage" class="heroImageBorder"></div><button onclick="clearImage()"><font color="white">x</font></button>
 	<font size = 20 color = white><div class="uppercase" id="randomHero"></div></font>
 	<button class ="bf2-buttons" onclick="randomLightHero()"> RANDOM HERO </button>
 	<button class ="bf2-buttons" onclick="randomDarkHero()">RANDOM VILLAIN</button> <br>
-  <button class ="bf2-buttons" onclick="clearImage()">x</button>
 
     </center>
 
