--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ div.heroImageBorder {
  		img.src = '/heroes/' + lightHeroes[randomLightNumber] + '.jpg';
  		document.getElementById('randomHeroImage').innerHTML = '';
  		document.getElementById('randomHeroImage').appendChild(img);
+    document.getElementById('randomHeroImage').innerHTML = '<button onclick="clearImage()"><font color="white">x</font></button>';
+   
  	}
  	
  	function randomDarkHero() {
