--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ div.heroImageBorder {
  		img.src = '/heroes/' + darkHeroes[randomDarkNumber] + '.jpg';
  		document.getElementById('randomHeroImage').innerHTML = '';
  		document.getElementById('randomHeroImage').appendChild(img);
+    document.getElementById('clearImage').innerHTML ='<button class="bf2-close-button" onclick="clearImage()"><font color="white">x</font></button>';
  	}
 
  </script>
