--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ div.uppercase {
 
 </style>
     <link rel='stylesheet' type='text/css' href='css/bf2.css'>
-    <link rel="shortcut icon" type="image/png" href="/Bf2ICON.png">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png">
     <title>Battlefront 2 Hero Randomizer</title>
 </head>
 <body style="background-color: #000000">
